# PCDVQ

./: .gitignore  README.md  ablation_svd.py  codebook.pt  codebook_direction.pt  codebook_e8_16_2.pt  codebook_magnitude.pt  codebooks.py  e8p.ipynb  filters.py  generate_codebooks.py  main.py  pyproject.toml  quantizer.py  qunatizer.py  requirements.txt  setup.sh  standart_requlazition.py  test.py
codebooks/: codebook_e8_10_2.pt  codebook_e8_12_2.pt  codebook_e8_14_2.pt  codebook_e8_16_2.pt  codebook_e8_8_2.pt  codebook_e8p_10_2.pt  codebook_e8p_12_2.pt  codebook_e8p_14_2.pt  codebook_e8p_16_2.pt  codebook_e8p_8_2.pt
notebooks/: e8p.ipynb  test.ipynb
src/pcdvq/: baseline.py  codebooks.py  filters.py  nearest.py  normalization.py  quantizer.py  standart_requlazition.py  utils.py
src/pcdvq/codebooks/: __main__.py  codebooks.py  container.py  e8p_lattice.py  lattice.py  lattice_e8.py  lattice_e8p.py  optimization.py
src/tests/: e8_test.py  simple_model_accuracy.txt  test.py  test_simple_model_accuracy.py
