[project]
dependencies = ["torch", "tqdm", "jupyter", "scipy", "lm-eval", "matplotlib>=3.10.7,<4", "torchvision>=0.24.1,<0.25", "ipywidgets>=8.1.8,<9", "black"]
name = "PCDVQ"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pcdvq = { path = ".", editable = true }
[tool.pixi.tasks]


[tool.black]
line-length = 130